total refactor project: refactor http.Errors + others errors + new errors + remove supportive outputs + add failure swagger outputs + add image array to post entity
