# docs/swagger.json
@@ -38,6 +38,12 @@
                         "schema": {
                             "$ref": "#/definitions/dto.LoginUserResponse"
                         }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -71,6 +77,12 @@
                         "schema": {
                             "$ref": "#/definitions/dto.RefreshUserTokenResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -103,6 +115,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.RegistrateUserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid email",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "user already exists",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -173,6 +197,18 @@
                         "schema": {
                             "$ref": "#/definitions/dto.CreatePostResponse"
                         }
+                    },
+                    "403": {
+                        "description": "no permission",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "409": {
+                        "description": "invalid idempotency key",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -220,6 +256,18 @@
                         "schema": {
                             "$ref": "#/definitions/dto.EditPostResponse"
                         }
+                    },
+                    "403": {
+                        "description": "no permission",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "post not found",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -265,6 +313,18 @@
                         "schema": {
                             "$ref": "#/definitions/dto.AddImageToPostResponse"
                         }
+                    },
+                    "403": {
+                        "description": "no permission",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "post not found",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -309,6 +369,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.DeleteImageFromPostResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "no permission",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "post or image not found",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -357,6 +429,24 @@
                         "schema": {
                             "$ref": "#/definitions/dto.PublishPostResponse"
                         }
+                    },
+                    "400": {
+                        "description": "invalid post status",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "no permission",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "post not found",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -366,7 +456,7 @@
         "dto.AddImageToPostResponse": {
             "type": "object",
             "properties": {
-                "image_id": {
+                "message": {
                     "type": "string"
                 }
             }
@@ -374,9 +464,6 @@
         "dto.CreatePostRequest": {
             "type": "object",
             "properties": {
-                "author_id": {
-                    "type": "string"
-                },
                 "content": {
                     "type": "string"
                 },
@@ -391,7 +478,7 @@
         "dto.CreatePostResponse": {
             "type": "object",
             "properties": {
-                "post_id": {
+                "message": {
                     "type": "string"
                 }
             }
@@ -399,7 +486,7 @@
         "dto.DeleteImageFromPostResponse": {
             "type": "object",
             "properties": {
-                "post_id": {
+                "message": {
                     "type": "string"
                 }
             }
@@ -418,7 +505,7 @@
         "dto.EditPostResponse": {
             "type": "object",
             "properties": {
-                "post_id": {
+                "message": {
                     "type": "string"
                 }
             }
@@ -448,13 +535,10 @@
         "dto.LoginUserResponse": {
             "type": "object",
             "properties": {
-                "access_token": {
+                "message": {
                     "type": "string"
                 },
                 "refresh_token": {
-                    "type": "string"
-                },
-                "user_id": {
                     "type": "string"
                 }
             }
@@ -470,7 +554,7 @@
         "dto.PublishPostResponse": {
             "type": "object",
             "properties": {
-                "post_id": {
+                "message": {
                     "type": "string"
                 }
             }
@@ -486,7 +570,7 @@
         "dto.RefreshUserTokenResponse": {
             "type": "object",
             "properties": {
-                "access_token": {
+                "message": {
                     "type": "string"
                 },
                 "refresh_token": {
@@ -511,13 +595,27 @@
         "dto.RegistrateUserResponse": {
             "type": "object",
             "properties": {
-                "access_token": {
-                    "type": "string"
-                },
-                "id": {
+                "message": {
                     "type": "string"
                 },
                 "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "entities.Image": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "image_id": {
+                    "type": "string"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "post_id": {
                     "type": "string"
                 }
             }
@@ -536,6 +634,12 @@
                 },
                 "idempotency_key": {
                     "type": "string"
+                },
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.Image"
+                    }
                 },
                 "post_id": {
                     "type": "string"
