# internal/models/entities/post.go
@@ -11,6 +11,5 @@ type Post struct {
 	Status         string    `json:"status"`
 	CreatedAt      time.Time `json:"created_at"`
 	UpdatedAt      time.Time `json:"updated_at"`
+	Images         []Image   `json:"images"`
 }
-
-//TODO: сделать массив image и выводить их при запросе также
